# learn_math_cpp

./: .gitmodules  CMakeLists.txt  README.md  compile_project.sh  gnuplot.h  setup_env.sh
gnuplot_demo/: CMakeLists.txt  gnuplot_lot_of_data.cc
simple_demo/: CMakeLists.txt  gnuplot_demo.cc  gnuplot_lot_of_data.cc  gnuplotpipe_demo.cc
use_ceres/: CMakeLists.txt  ceresCurveFitting.cc  gaussNewton.cc  hello_ceres.cc  nonlinear_circle_fit.cc
use_sophus/: CMakeLists.txt  se_demo.cc  so_demo.cc  use_sophus.cc
